fix: align design

--- a/src/features/userRegister/sellerRegister/ui/RegisterSellerForm.module.scss
+++ b/src/features/userRegister/sellerRegister/ui/RegisterSellerForm.module.scss
@@ -30,7 +30,7 @@
   }
 
   span:last-child {
-    font-size: 10px;
+    font-size: 13px;
   }
 }
 
