--- a/src/widgets/Footer/ui/bottomFooter/BottomFooter.module.scss
+++ b/src/widgets/Footer/ui/bottomFooter/BottomFooter.module.scss
@@ -7,8 +7,8 @@
   justify-content: space-between;
   height: 61px;
   align-items: center;
-  width: 1280px;
   margin: auto;
+  flex-wrap: wrap;
 }
 
 .FooterAgreement {
