--- a/src/widgets/Header/ui/Header.module.scss
+++ b/src/widgets/Header/ui/Header.module.scss
@@ -29,4 +29,5 @@
   padding: 0 !important;
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
 }
